# ecommerce-refiner-env

./: .gitignore  Dockerfile  README.md  agent.py  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  validate-submission.sh
server/: app.py  tasks.py
